--- a/index.html
+++ b/index.html
@@ -156,15 +156,15 @@
                 производстве, c использованием современного оборудования
                 и проверенных временем технологий.</p>
             </li>
-            <li class='ecology'>
-              <p>Для изготовления мороженого используются настоящие сливки
-                и молоко высочайшего качества. Все дополнительные ингредиенты
-                и добавки произведены из натурального, экологически чистого сырья.</p>
-            </li>
             <li class='purchase'>
               <p>Закупка ингредиентов производится только у проверенных фермерских
                 хозяйств и компаний, с которыми нас связывает долговременное
                 сотрудничество</p>
+            </li>
+            <li class='ecology'>
+              <p>Для изготовления мороженого используются настоящие сливки
+                и молоко высочайшего качества. Все дополнительные ингредиенты
+                и добавки произведены из натурального, экологически чистого сырья.</p>
             </li>
             <li class='delivery'>
               <p>Доставка нашего мороженого до заказчиков осуществляется в
@@ -176,22 +176,27 @@
         <article class='blog'>
           <h3 class='blog-caption'>Новое в нашем блоге</h3>
           <a href='#' class='blog-name link'>
-            10 способов сервировки фруктовых щербетов к столу
+            10 способов сервировки
+            фруктовых щербетов к
+            столу
           </a>
         </article>
         <div class='subscription'>
-          <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе высего
-            самого вкусного, что у нас происходит. Обещаем не спамить и не слать
-            всякой ненужной ерунды. Честно =)</p>
-          <form action='#' method='post'>
-            <label class='visually-hidden' for='subs-email'>Электронная почта</label>
-            <input type='email' name='email-subs' id='subs-email' placeholder='Электронная почта'>
-            <button type='submit' class='button'>Отправить</button>
-          </form>
+          <div class='sub-info'>
+            <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе высего
+              самого вкусного, что у нас происходит. Обещаем не спамить и не слать
+              всякой ненужной ерунды. Честно =)</p>
+            <form action='#' method='post'>
+              <label class='visually-hidden' for='subs-email'>Электронная почта</label>
+              <input type='email' name='email-subs' id='subs-email' placeholder='Электронная почта'>
+              <button type='submit' class='button sub-button'>Отправить</button>
+            </form>
+          </div>
         </div>
       </div>
     </main>
     <div class='map'>
+      <span class='pin'></span>
       <div class='container'>
         <div class='contact-information'>
           Адрес главного офиса<br>
@@ -222,7 +227,7 @@
         <a href='htmlacademy.ru' class='link'>
           <img src='img/logo-htmlacademy.svg' width='108' height='39' alt='Логотип HTML academy'>
         </a>
-        <p>Сделано в <a href='htmlacademy.ru' class='link'>HTML Academy</a> © 2017</p>
+        <p>Сделано в <a href='htmlacademy.ru' class='link academy-link'>HTML Academy</a> © 2017</p>
       </div>
     </footer>
     <div class='feedback-window'>
