--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset='utf-8'>
     <title>HTML Academy: Глейси</title>
-    <link href='https://fonts.googleapis.com/css?family=Roboto:400,700&amp;subset=cyrillic' rel='stylesheet'>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
     <link href='css/style.css' rel='stylesheet'>
   </head>
   <body>
@@ -220,7 +220,7 @@
       <ul class='additional-list'>
         <li><a class='for-providers link' href='#'>Для поставщиков</a></li>
         <li><a class='documents link' href='#'>Наши документы</a></li>
-        <li><a class='about-production link' href='#'>О производсвте</a></li>
+        <li><a class='about-production link' href='#'>О производстве</a></li>
         <li><a class='standards link' href='#'>Экологические стандарты</a></li>
       </ul>
       <div class='footer-copyright'>
