--- a/catalog.html
+++ b/catalog.html
@@ -55,7 +55,7 @@
             </form>
           </div>
           <div class='inner-page-basket basket link user-navigation-item' href='#'>2 товара
-            <div class='basket-table'> <!--обернул в див, чтобы ссылка "оформить заказ" не выпадала из окна таблицы-->
+            <div class='basket-table'>
               <table>
                 <tr>
                   <td><button type='button' class='visually-hidden delete'>x</button></td>
