--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <h1 class='visually-hidden'>Магазин мороженого Глэйси</h1>
       <div class='slider'>
         <button type='button' class='slider-button-1 visually-hidden'></button>
-        <button type='button' class='slider-button-2 visually-hidden'></button><!--Сделал пока кнопки для слайдер, раз радио не нужны для слайдер, сделал обычные кнопки -->
+        <button type='button' class='slider-button-2 visually-hidden'></button>
         <button type='button' class='slider-button-3 visually-hidden'></button>
         <div class='slider-top first-slide' id='first-slide'>
           <img src='img/icecream-slide1.png' height='881' width='1045' alt='Крем-брюле и пломбир с малиновым джемом'>
@@ -104,7 +104,7 @@
       </div>
       <ul class='product-icecream'>
         <li>
-          <a href='#' class='icecream link'> <!--Ширина и высота изображений задана предварительно-->
+          <a href='#' class='icecream link'>
             <img src='img/product-01.jpg' width='267' height='267' alt='Сливочное с апельсиновым джемом и цитрусовой стружкой'>
             <p class='icecream-price'>310₽<span class='icecream-kilo'>/кг</span></p>
             <h3 class='icecream-name'>
