--- a/catalog.html
+++ b/catalog.html
@@ -125,19 +125,19 @@
             <legend class='option-caption'>Жирность:</legend>
             <ul class='fatness-list'>
               <li>
-                <input class='radio-button' hidden type='radio' name='fatness' value='0' id='zero'>
+                <input class='radio-button' type='radio' name='fatness' value='0' id='zero'>
                 <label for='zero'>0%</label>
               </li>
               <li>
-                <input class='radio-button' hidden type='radio' name='fatness' value='10' checked id='ten'>
+                <input class='radio-button' type='radio' name='fatness' value='10' checked id='ten'>
                 <label for='ten'>до 10%</label>
               </li>
               <li>
-                <input class='radio-button' hidden type='radio' name='fatness' value='30' id='before-thrity'>
+                <input class='radio-button' type='radio' name='fatness' value='30' id='before-thrity'>
                 <label for='before-thrity'>до 30%</label>
               </li>
               <li>
-                <input class='radio-button' hidden type='radio' name='fatness' value='>30' id='after-thrity'>
+                <input class='radio-button' type='radio' name='fatness' value='>30' id='after-thrity'>
                 <label for='after-thrity'>выше 30%</label>
               </li>
             </ul>
@@ -295,7 +295,7 @@
         </li>
       </ul>
       <ul class='pagination'>
-        <li class='left'>
+        <li class='left disabled'>
           <a href='#' class='back link'></a>
         </li>
         <li class='active-page'><a href='catalog.html' class='link'>1</a></li>
@@ -322,10 +322,10 @@
       <li><a class='standards link' href='#'>Экологические стандарты</a></li>
       </ul>
       <div class='footer-copyright'>
-        <a href='htmlacademy.ru' class='link'>
+        <a href='https://htmlacademy.ru/intensive/htmlcss'>
           <img src='img/logo-htmlacademy.svg' width='108' height='39' alt='Логотип HTML academy'>
         </a>
-        <p>Сделано в <a href='htmlacademy.ru' class='link'>HTML Academy</a> © 2017</p>
+        <p>Сделано в <a href='https://htmlacademy.ru/intensive/htmlcss' class='link'>HTML Academy</a> © 2017</p>
       </div>
     </footer>
   </body>
