--- a/index.html
+++ b/index.html
@@ -40,13 +40,11 @@
                   <label class='visually-hidden' for='user-password'>Пароль</label>
                   <input type='password' name='password' id='user-password' placeholder='Пароль'>
                 </li>
-                <li>
+                <li class='button-item'>
                   <button class='button sign-in' type='submit'>Войти</button>
                 </li>
                 <li class='login-password-info'>
                   <a class='login-problem link' href='#'>Забыли пароль?</a>
-                </li>
-                <li class='login-password-info'>
                   <a class='login-problem link' href='#'>Новая регистрация</a>
                 </li>
               </ul>
@@ -89,13 +87,13 @@
         </div>
       </div>
       <div class='offers-wrapper'>
-        <section class='first-offers'>
+        <section class='first-offer'>
           <h2 class='offers-caption'>Малинка даром!</h2>
           <p class='offers'>При покупке 2кг любого фруктового мороженого, добавим
            в ваш заказ банку малинового варенья бесплатно.</p>
            <a href='#' class='button offers-button link'>Хочу варенье!</a>
         </section>
-        <section class='second-offers'>
+        <section class='second-offer'>
           <h2 class='offers-caption'>Шоколадки даром!</h2>
           <p>При покупке 2кг пломбира, добавим в ваш заказ упаковку
             вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
@@ -148,7 +146,7 @@
         <article class='advantages'>
           <h2 class='visually-hidden'>Приемущества компании</h2>
           <h3 class='definition'>
-            <span>Магазин Глэйси - это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</span>
+            Магазин Глэйси - это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес
           </h3>
           <ul class='advantages-list'>
             <li class='making'>
@@ -224,10 +222,10 @@
         <li><a class='standards link' href='#'>Экологические стандарты</a></li>
       </ul>
       <div class='footer-copyright'>
-        <a href='htmlacademy.ru' class='link'>
+        <a href='https://htmlacademy.ru/intensive/htmlcss'>
           <img src='img/logo-htmlacademy.svg' width='108' height='39' alt='Логотип HTML academy'>
         </a>
-        <p>Сделано в <a href='htmlacademy.ru' class='link academy-link'>HTML Academy</a> © 2017</p>
+        <p>Сделано в <a href='https://htmlacademy.ru/intensive/htmlcss' class='link academy-link'>HTML Academy</a> © 2017</p>
       </div>
     </footer>
     <div class='feedback-window'>
