--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
           <li class='site-navigation-item'><a href='about-company.html' class='link main-menu'>О Компании</a></li>
         </ul>
         <div class='user-navigation'>
-          <span class='search-logo user-navigation-item'>
+          <div class='search-logo user-navigation-item'>
             <form class='search-form' action='https://echo.htmlacademy.ru' method='get'>
               <input type='search' class='search-field' name='search' placeholder='Что ищем?'>
             </form>
-          </span>
-          <div href='#' class='login-link link user-navigation-item'>Вход
+          </div>
+          <div class='login-link link user-navigation-item'>Вход
             <form class='login-form' action='https://echo.htmlacademy.ru' method='post'>
               <ul class='login-window'>
                 <li class='login-field'>
@@ -109,7 +109,7 @@
               <span>Сливочное с апельсиновым джемом и цитрусовой стружкой</span>
             </h3>
           </a>
-          <button type='button' class='button' href='#'>Быстрый просмотр</button>
+          <button type='button' class='button'>Быстрый просмотр</button>
         </li>
         <li>
           <a href='#' class='icecream link'>
