--- a/index.html
+++ b/index.html
@@ -65,9 +65,14 @@
     <main class='container'>
       <h1 class='visually-hidden'>Магазин мороженого Глэйси</h1>
       <div class='slider'>
-        <button type='button' class='slider-button-1 visually-hidden'></button>
-        <button type='button' class='slider-button-2 visually-hidden'></button>
-        <button type='button' class='slider-button-3 visually-hidden'></button>
+        <div class='slider-controls'>
+          <input type='radio' name='slider' class='slider-button slider-button-1' id='slider-1'>
+          <label for='slider-1'></label>
+          <input type='radio' name='slider' class='slider-button slider-button-2' id='slider-2'>
+          <label for='slider-2'></label>
+          <input type='radio' name='slider' class='slider-button slider-button-3' id='slider-3'>
+          <label for='slider-3'></label>
+        </div>
         <div class='slider-top first-slide' id='first-slide'>
           <img src='img/icecream-slide1.png' height='881' width='1045' alt='Крем-брюле и пломбир с малиновым джемом'>
           <div class='caption-slide'>
@@ -254,6 +259,8 @@
           </li>
         </ul>
       </form>
+    </div>
+    <div class='overlay'>
     </div>
   </body>
 </html>
