--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
       </div>
     </main>
     <div class='map'>
-      <span class='pin'></span>
+      <!-- <span class='pin'></span> -->
       <div class='container'>
         <div class='contact-information'>
           Адрес главного офиса<br>
