--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset='utf-8'>
     <title>HTML Academy: Глейси</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic' rel='stylesheet'>
     <link href='css/style.css' rel='stylesheet'>
   </head>
   <body>
@@ -66,7 +66,7 @@
       <h1 class='visually-hidden'>Магазин мороженого Глэйси</h1>
       <div class='slider'>
         <div class='slider-controls'>
-          <input type='radio' name='slider' class='slider-button slider-button-1' id='slider-1'>
+          <input type='radio' name='slider' class='slider-button slider-button-1' id='slider-1' checked>
           <label for='slider-1'></label>
           <input type='radio' name='slider' class='slider-button slider-button-2' id='slider-2'>
           <label for='slider-2'></label>
@@ -179,9 +179,9 @@
         <article class='blog'>
           <h3 class='blog-caption'>Новое в нашем блоге</h3>
           <a href='#' class='blog-name link'>
-            10 способов сервировки
-            фруктовых щербетов к
-            столу
+            10 способов сервировки<br>
+            фруктовых щербетов<br>
+            к столу
           </a>
         </article>
         <div class='subscription'>
