--- a/index.html
+++ b/index.html
@@ -94,14 +94,18 @@
       <div class='offers-wrapper'>
         <section class='first-offer'>
           <h2 class='offers-caption'>Малинка даром!</h2>
-          <p class='offers'>При покупке 2кг любого фруктового мороженого, добавим
-           в ваш заказ банку малинового варенья бесплатно.</p>
-           <a href='#' class='button offers-button link'>Хочу варенье!</a>
+          <p class='offers'>
+            При покупке 2 кг любого фруктового мороженого, добавим
+           в ваш заказ банку малинового варенья бесплатно.
+          </p>
+          <a href='#' class='button offers-button link'>Хочу варенье!</a>
         </section>
         <section class='second-offer'>
           <h2 class='offers-caption'>Шоколадки даром!</h2>
-          <p>При покупке 2кг пломбира, добавим в ваш заказ упаковку
-            вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
+          <p>
+            При покупке 2 кг пломбира, добавим в ваш заказ упаковку
+            вкуснейшей шоколадной присыпки совершенно бесплатно.
+          </p>
           <a href='#' class='button offers-button link'>Хочу шоколадки!</a>
         </section>
       </div>
@@ -151,7 +155,7 @@
         <article class='advantages'>
           <h2 class='visually-hidden'>Приемущества компании</h2>
           <h3 class='definition'>
-            Магазин Глэйси - это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес
+            Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес
           </h3>
           <ul class='advantages-list'>
             <li class='making'>
@@ -165,7 +169,7 @@
                 сотрудничество</p>
             </li>
             <li class='ecology'>
-              <p>Для изготовления мороженого используются настоящие сливки
+              <p>Для приготовления мороженого используются настоящие сливки
                 и молоко высочайшего качества. Все дополнительные ингредиенты
                 и добавки произведены из натурального, экологически чистого сырья.</p>
             </li>
@@ -180,16 +184,16 @@
           <h3 class='blog-caption'>Новое в нашем блоге</h3>
           <a href='#' class='blog-name link'>
             10 способов сервировки<br>
-            фруктовых щербетов<br>
-            к столу
+            фруктовых щербетов к<br>
+            столу
           </a>
         </article>
         <div class='subscription'>
           <div class='sub-info'>
-            <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе высего
-              самого вкусного, что у нас происходит. Обещаем не спамить и не слать
-              всякой ненужной ерунды. Честно =)</p>
-            <form action='#' method='post'>
+            <p>
+              Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)
+            </p>
+            <form action='#' method='post' class='subscribe-form'>
               <label class='visually-hidden' for='subs-email'>Электронная почта</label>
               <input type='email' name='email-subs' id='subs-email' placeholder='Электронная почта'>
               <button type='submit' class='button sub-button'>Отправить</button>
@@ -202,13 +206,13 @@
       <!-- <span class='pin'></span> -->
       <div class='container'>
         <div class='contact-information'>
-          Адрес главного офиса<br>
-            и офлайн магазина:
+          <p>Адрес главного офиса<p>
+          <p>и офлайн магазина:<p>
           <p class='address'>ул. Большая Конюшенная<br>
               19/8, Санкт-Петербург</p>
-          Для заказов по телефону:
+          <p>Для заказов по телефону:</p>
           <p class='phone'> 8 812 450-25-25</p>
-          (c 10 до 20 ежедневно)
+          <p>(c 10 до 20 ежедневно)</p>
           <button type='button' class='button'>Форма обратной связи</button>
         </div>
       </div>
