--- a/index.html
+++ b/index.html
@@ -81,14 +81,18 @@
           </div>
         </div>
         <div class='slider-top second-slide' id='second-slide'>
-          <p>Шоколадный пломбир и лимонный сорбет</p>
           <img src='img/icecream-slide2.png' height='859' width='1065' alt='Шоколадный пломбир и лимонный сорбет'>
-          <a href='#' class='button link'>Давайте оба!</a>
+          <div class='caption-slide'>
+            <p>Шоколадный пломбир<br>и лимонный сорбет</p>
+            <a href='#' class='button link'>Давайте оба!</a>
+          </div>
         </div>
         <div class='slider-top thrid-slide' id='thrid-slide'>
-          <p>Пломбир с помадкой и клубничный щербет</p>
           <img src='img/icecream-slide3.png' height='854' width='1079' alt='Пломбир с помадкой и клубничный щербет'>
-          <a href='#' class='button link'>Давайте оба!</a>
+          <div class='caption-slide'>
+            <p>Пломбир с помадкой<br>и клубничный щербет</p>
+            <a href='#' class='button link'>Давайте оба!</a>
+          </div>
         </div>
       </div>
       <div class='offers-wrapper'>
