--- a/catalog.html
+++ b/catalog.html
@@ -104,14 +104,14 @@
             <legend class='option-caption'>Сортировка:</legend>
             <label class='option-caption' for='sort'></label>
             <select class='sorting-type' name='sorting-type' id='sort'>
-              <option value='popularity'>по-популярности</option>
+              <option value='popularity'>по популярности</option>
               <option value='inexpensive-first'>сначала недорогие</option>
               <option value='expensive-first'>сначала дорогие</option>
               <option value='fat-content'>по жирности</option>
             </select>
           </fieldset>
           <fieldset class='price-field'>
-            <legend class='option-caption'>Цена: 100 руб. - 500 руб.</legend>
+            <legend class='option-caption'>Цена: 100 руб. – 500 руб.</legend>
             <div class='range-container'>
               <input class='range-sort' type='range' min='100' max='500' step='10' name='price' id='price'>
               <label for='price'></label>
@@ -314,9 +314,9 @@
       </ul>
       <ul class='additional-list'>
         <li><a class='for-providers link' href='#'>Для поставщиков</a></li>
-        <li><a class='about-production link' href='#'>О производсвте</a></li>
         <li><a class='documents link' href='#'>Наши документы</a></li>
-      <li><a class='standards link' href='#'>Экологические стандарты</a></li>
+        <li><a class='about-production link' href='#'>О производсвте</a></li>
+        <li><a class='standards link' href='#'>Экологические стандарты</a></li>
       </ul>
       <div class='footer-copyright'>
         <a href='https://htmlacademy.ru/intensive/htmlcss'>
