--- a/catalog.html
+++ b/catalog.html
@@ -85,7 +85,7 @@
         </p>
       </div>
     </header>
-    <main class='container inner-page'>
+    <main class='container inner-page IE-container'>
       <div class='wrapper-top'>
         <ul class='breadcrumbs'>
           <li>
