--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </p>
       </div>
     </header>
-    <main class='container'>
+    <main class='container IE-container'>
       <h1 class='visually-hidden'>Магазин мороженого Глэйси</h1>
       <div class='slider'>
         <div class='slider-controls'>
@@ -207,7 +207,6 @@
       </div>
     </main>
     <div class='map'>
-      <!-- <span class='pin'></span> -->
       <div class='container'>
         <div class='contact-information'>
           <p>Адрес главного офиса<p>
