Фикс знака рубля у карточек товаров

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <li>
           <a href='#' class='icecream link'>
             <img src='img/product-01.jpg' width='267' height='267' alt='Сливочное с апельсиновым джемом и цитрусовой стружкой'>
-            <p class='icecream-price'>310₽<span class='icecream-kilo'>/кг</span></p>
+            <p class='icecream-price'>310<span class='icecream-kilo'>/кг</span></p>
             <h3 class='icecream-name'>
               <span>Сливочное с апельсиновым джемом и цитрусовой стружкой</span>
             </h3>
@@ -128,7 +128,7 @@
         <li>
           <a href='#' class='icecream link'>
             <img src='img/product-02.jpg' width='267' height='267' alt='Сливочно-кофейное с кусочками шоколада'>
-            <p class='icecream-price'>380₽<span class='icecream-kilo'>/кг</span></p>
+            <p class='icecream-price'>380<span class='icecream-kilo'>/кг</span></p>
             <h3 class='icecream-name'>
               <span>Сливочно-кофейное с кусочками шоколада</span>
             </h3>
@@ -138,7 +138,7 @@
         <li>
           <a href='#' class='icecream link'>
             <img src='img/product-03.jpg' width='267' height='267' alt='Сливочно-клубничное с присыпкой из белого шоколада'>
-            <p class='icecream-price'>355₽<span class='icecream-kilo'>/кг</span></p>
+            <p class='icecream-price'>355<span class='icecream-kilo'>/кг</span></p>
             <h3 class='icecream-name'>
               <span>Сливочно-клубничное с присыпкой из белого шоколада</span>
             </h3>
@@ -148,7 +148,7 @@
         <li>
           <a href='#' class='icecream link'>
             <img src='img/product-04.jpg' width='267' height='267' alt='Сливочное крем-брюле с карамальной подливкой'>
-            <p class='icecream-price'>415₽<span class='icecream-kilo'>/кг</span></p>
+            <p class='icecream-price'>415<span class='icecream-kilo'>/кг</span></p>
             <h3 class='icecream-name'>
               <span>Сливочное крем-брюле с карамальной подливкой</span>
             </h3>
