--- a/catalog.html
+++ b/catalog.html
@@ -174,7 +174,7 @@
         <li>
           <a href='#' class='icecream link'>
             <img src='img/product-01.jpg' width='267' height='267' alt='Сливочное с апельсиновым джемом и цитрусовой стружкой'>
-            <p class='icecream-price'>310₽<span class='icecream-kilo'>/кг</span></p>
+            <p class='icecream-price'>310<span class='icecream-kilo'>/кг</span></p>
             <h2 class='icecream-name'>
               <span>Сливочное с апельсиновым джемом и цитрусовой стружкой</span>
             </h2>
@@ -184,7 +184,7 @@
         <li>
           <a href='#' class='icecream link'>
             <img src='img/product-02.jpg' width='267' height='267' alt='Сливочно-кофейное с кусочками шоколада'>
-            <p class='icecream-price'>380₽<span class='icecream-kilo'>/кг</span></p>
+            <p class='icecream-price'>380<span class='icecream-kilo'>/кг</span></p>
             <h2 class='icecream-name'>
               <span>Сливочно-кофейное с кусочками шоколада</span>
             </h2>
@@ -194,7 +194,7 @@
         <li>
           <a href='#' class='icecream link'>
             <img src='img/product-03.jpg' width='267' height='267' alt='Сливочно-клубничное с присыпкой из белого шоколада'>
-            <p class='icecream-price'>355₽<span class='icecream-kilo'>/кг</span></p>
+            <p class='icecream-price'>355<span class='icecream-kilo'>/кг</span></p>
             <h2 class='icecream-name'>
               <span>Сливочно-клубничное с присыпкой из белого шоколада</span>
             </h2>
@@ -204,7 +204,7 @@
         <li>
           <a href='#' class='icecream link'>
             <img src='img/product-04.jpg' width='267' height='267' alt='Сливочное крем-брюле с карамальной подливкой'>
-            <p class='icecream-price'>415₽<span class='icecream-kilo'>/кг</span></p>
+            <p class='icecream-price'>415<span class='icecream-kilo'>/кг</span></p>
             <h2 class='icecream-name'>
               <span>Сливочное крем-брюле с карамальной подливкой</span>
             </h2>
@@ -214,7 +214,7 @@
         <li>
           <a href='#' class='icecream link'>
             <img src='img/product-05.jpg' width='267' height='267' alt='Сливочное с брусничным джемом'>
-            <p class='icecream-price'>325₽<span class='icecream-kilo'>/кг</span></p>
+            <p class='icecream-price'>325<span class='icecream-kilo'>/кг</span></p>
             <h2 class='icecream-name'>
               <span>Сливочное с брусничным джемом</span>
             </h2>
@@ -224,7 +224,7 @@
         <li>
           <a href='#' class='icecream link'>
             <img src='img/product-06.jpg' width='267' height='267' alt='Сливочно-черничное с цельными ягодами черники'>
-            <p class='icecream-price'>410₽<span class='icecream-kilo'>/кг</span></p>
+            <p class='icecream-price'>410<span class='icecream-kilo'>/кг</span></p>
             <h2 class='icecream-name'>
               <span>Сливочно-черничное с цельными ягодами черники</span>
             </h2>
@@ -234,7 +234,7 @@
         <li>
           <a href='#' class='icecream link'>
             <img src='img/product-07.jpg' width='267' height='267' alt='Сливочно-лимонное с карамельной присыпкой'>
-            <p class='icecream-price'>375₽<span class='icecream-kilo'>/кг</span></p>
+            <p class='icecream-price'>375<span class='icecream-kilo'>/кг</span></p>
             <h2 class='icecream-name'>
               <span>Сливочно-лимонное с карамельной присыпкой</span>
             </h2>
@@ -244,7 +244,7 @@
         <li>
           <a href='#' class='icecream link'>
             <img src='img/product-08.jpg' width='267' height='267' alt='Сливочное c шоколадной стружкой'>
-            <p class='icecream-price'>320₽<span class='icecream-kilo'>/кг</span></p>
+            <p class='icecream-price'>320<span class='icecream-kilo'>/кг</span></p>
             <h2 class='icecream-name'>
               <span>Сливочное c шоколадной стружкой</span>
             </h2>
@@ -254,7 +254,7 @@
         <li>
           <a href='#' class='icecream link'>
             <img src='img/product-09.jpg' width='267' height='267' alt='Сливочное-ванильное с кусочками шоколада'>
-            <p class='icecream-price'>440₽<span class='icecream-kilo'>/кг</span></p>
+            <p class='icecream-price'>440<span class='icecream-kilo'>/кг</span></p>
             <h2 class='icecream-name'>
               <span>Сливочно-ванильное с кусочками шоколада</span>
             </h2>
@@ -264,7 +264,7 @@
         <li>
           <a href='#' class='icecream link'>
             <img src='img/product-10.jpg' width='267' height='267' alt='Сливочно c ментоловым сиропом'>
-            <p class='icecream-price'>435₽<span class='icecream-kilo'>/кг</span></p>
+            <p class='icecream-price'>435<span class='icecream-kilo'>/кг</span></p>
             <h2 class='icecream-name'>
               <span>Сливочное c ментоловым сиропом</span>
             </h2>
@@ -274,7 +274,7 @@
         <li>
           <a href='#' class='icecream link'>
             <img src='img/product-11.jpg' width='267' height='267' alt='Сливочное с кусочками черного шоколада'>
-            <p class='icecream-price'>355₽<span class='icecream-kilo'>/кг</span></p>
+            <p class='icecream-price'>355<span class='icecream-kilo'>/кг</span></p>
             <h2 class='icecream-name'>
               <span>Сливочное с кусочками черного шоколада</span>
             </h2>
@@ -284,7 +284,7 @@
         <li>
           <a href='#' class='icecream link'>
             <img src='img/product-12.jpg' width='267' height='267' alt='Сливочное с мятным сиропом'>
-            <p class='icecream-price'>420₽<span class='icecream-kilo'>/кг</span></p>
+            <p class='icecream-price'>420<span class='icecream-kilo'>/кг</span></p>
             <h2 class='icecream-name'>
               <span>Сливочное с мятным сиропом</span>
             </h2>
