Добавлен script на popup
Пока добавлял, нашел лишний  HTML элемент

--- a/catalog.html
+++ b/catalog.html
@@ -302,7 +302,7 @@
         <li><a href='catalog4.html' class='link'>4</a></li>
         <li><a href='catalog5.html' class='link'>5</a></li>
         <li class='right'>
-          <a href='#' class='next link'></a>
+          <a href='#' class='link'></a>
         </li>
       </ul>
     </main>
