--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
           <p>Для заказов по телефону:</p>
           <p class='phone'> 8 812 450-25-25</p>
           <p>(c 10 до 20 ежедневно)</p>
-          <button type='button' class='button'>Форма обратной связи</button>
+          <button type='button' class='button feedback-link'>Форма обратной связи</button>
         </div>
       </div>
     </div>
@@ -246,9 +246,6 @@
       <form action='#' method='post' class='feedback-form'>
         <ul class='feedback-list'>
           <li>
-            <button type='button' class='visually-hidden close'>х</button>
-          </li>
-          <li>
             <label class='visually-hidden' for='user-name'>Имя</label>
             <input type='text' name='your-name' class='feedback-contacts' id='user-name' placeholder='Как вас зовут?'>
           </li>
@@ -270,5 +267,6 @@
     </div>
     <div class='overlay'>
     </div>
+    <script src="js/script.js"></script>
   </body>
 </html>
