--- a/index.html
+++ b/index.html
@@ -247,11 +247,11 @@
         <ul class='feedback-list'>
           <li>
             <label class='visually-hidden' for='user-name'>Имя</label>
-            <input type='text' name='your-name' class='feedback-contacts' id='user-name' placeholder='Как вас зовут?'>
+            <input type='text' name='your-name' id='user-name' placeholder='Как вас зовут?'>
           </li>
           <li>
             <label class='visually-hidden' for='feedback-email'>Электронная почта</label>
-            <input type='email' name='email-feedback' class='feedback-contacts' id='feedback-email' placeholder='Ваша почта для ответа?'>
+            <input type='email' name='email-feedback' id='feedback-email' placeholder='Ваша почта для ответа?'>
           </li>
           <li>
             <textarea class='feedback-comment' name='comment' id='comment-field' rows='5' placeholder='Напишите что-нибудь...'></textarea>
