--- a/catalog.html
+++ b/catalog.html
@@ -153,15 +153,15 @@
               </li>
               <li>
                 <input class='checkbox-button' type='checkbox' name='fruit-fillers' id='fruit'>
-                <label for='fruit'>фрукты</label>
+                <label for='fruit' class='fruit'>фрукты</label>
               </li>
               <li>
                 <input class='checkbox-button' type='checkbox' name='syrup-fillers' id='syrup'>
-                <label for='syrup'>сиропы</label>
+                <label for='syrup' class='syrup'>сиропы</label>
               </li>
               <li>
                 <input class='checkbox-button' type='checkbox' name='jam-fillers' id='jam'>
-                <label for='jam'>джемы</label>
+                <label for='jam' class='jam'>джемы</label>
               </li>
             </ul>
           </fieldset>
