--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href='css/normalize.css' rel='stylesheet'>
     <link href='css/style.css' rel='stylesheet'>
   </head>
-  <body>
+  <body class='background-wrapper'>
     <header class='main-header container'>
       <nav class='main-navigation'>
         <img src='img/logo.svg' width='154' height='64' class='main-header-logo' alt='Логотип GllacyShop'>
@@ -67,11 +67,11 @@
       <h1 class='visually-hidden'>Магазин мороженого Глэйси</h1>
       <div class='slider'>
         <div class='slider-controls'>
-          <input type='radio' name='slider' class='slider-button slider-button-1' id='slider-1' checked>
+          <input type='radio' name='slider' class='slider-button slider-button-1' id='slider-1' checked autocomplete='off'>
           <label for='slider-1'></label>
-          <input type='radio' name='slider' class='slider-button slider-button-2' id='slider-2'>
+          <input type='radio' name='slider' class='slider-button slider-button-2' id='slider-2' autocomplete='off'>
           <label for='slider-2'></label>
-          <input type='radio' name='slider' class='slider-button slider-button-3' id='slider-3'>
+          <input type='radio' name='slider' class='slider-button slider-button-3' id='slider-3' autocomplete='off'>
           <label for='slider-3'></label>
         </div>
         <div class='slider-top first-slide' id='first-slide'>
@@ -81,15 +81,15 @@
             <a href='#' class='button link'>Давайте оба!</a>
           </div>
         </div>
-        <div class='slider-top second-slide' id='second-slide'>
-          <img src='img/icecream-slide2.png' height='859' width='1065' alt='Шоколадный пломбир и лимонный сорбет'>
+        <div class='slider-top second-slide not-show' id='second-slide'>
+          <img src='img/icecream-slide2.png' height='881' width='1065' alt='Шоколадный пломбир и лимонный сорбет'>
           <div class='caption-slide'>
             <p>Шоколадный пломбир<br>и лимонный сорбет</p>
             <a href='#' class='button link'>Давайте оба!</a>
           </div>
         </div>
-        <div class='slider-top thrid-slide' id='thrid-slide'>
-          <img src='img/icecream-slide3.png' height='854' width='1079' alt='Пломбир с помадкой и клубничный щербет'>
+        <div class='slider-top thrid-slide not-show' id='thrid-slide'>
+          <img src='img/icecream-slide3.png' height='881' width='1079' alt='Пломбир с помадкой и клубничный щербет'>
           <div class='caption-slide'>
             <p>Пломбир с помадкой<br>и клубничный щербет</p>
             <a href='#' class='button link'>Давайте оба!</a>
