--- a/catalog.html
+++ b/catalog.html
@@ -9,10 +9,10 @@
   </head>
   <body>
     <header class='main-header container'>
+      <a class='main-header-logo link' href='index.html'>
+        <img src='img/logo.svg' width='154' height='64' alt='Логотип GllacyShop'>
+      </a>
       <nav class='main-navigation'>
-        <a class='main-header-logo link' href='index.html'>
-          <img src='img/logo.svg' width='154' height='64' alt='Логотип GllacyShop'>
-        </a>
         <ul class='site-navigation'>
           <li class='submenu-container site-navigation-item active'><a href='#' class='link main-menu active-item'>Каталог</a>
             <ul class='catalog-navigation'>
@@ -100,7 +100,7 @@
           <li>Сливочное</li>
         </ul>
         <h1 class='main-caption'>Сливочное мороженое</h1>
-        <form class='options' action='#' method='get'>
+        <form class='options' action='https://echo.htmlacademy.ru' method='get'>
           <fieldset class='sorting'>
             <legend class='option-caption'>Сортировка:</legend>
             <label class='option-caption' for='sort'></label>
