--- a/catalog.html
+++ b/catalog.html
@@ -29,7 +29,7 @@
         <div class='user-navigation'>
           <div class='search-logo user-navigation-item'>
             <form class='search-form' action='https://echo.htmlacademy.ru' method='get'>
-              <input type='search' class='search-field' name='search' placeholder='Что ищем?'>
+              <input type='search' class='search-field' name='search' placeholder='Что ищем?' required>
             </form>
           </div>
           <div class='login-link link user-navigation-item'>Вход
@@ -37,11 +37,11 @@
               <ul class='login-window'>
                 <li class='login-field'>
                   <label class='visually-hidden' for='user-email'>Электронная почта</label>
-                  <input type='email' name='email' id='user-email' placeholder='Электронная почта'>
+                  <input type='email' name='email' id='user-email' placeholder='Электронная почта' required>
                 </li>
                 <li class='login-field'>
                   <label class='visually-hidden' for='user-password'>Пароль</label>
-                  <input type='password' name='password' id='user-password' placeholder='Пароль'>
+                  <input type='password' name='password' id='user-password' placeholder='Пароль' required>
                 </li>
                 <li class='button-item'>
                   <button class='button sign-in' type='submit'>Войти</button>
