--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class='user-navigation'>
           <div class='search-logo user-navigation-item'>
             <form class='search-form' action='https://echo.htmlacademy.ru' method='get'>
-              <input type='search' class='search-field' name='search' placeholder='Что ищем?'>
+              <input type='search' class='search-field' name='search' placeholder='Что ищем?' required>
             </form>
           </div>
           <div class='login-link link user-navigation-item'>Вход
@@ -268,6 +268,6 @@
     </div>
     <div class='overlay'>
     </div>
-    <script src="js/script.js"></script>
+    <script src='js/script.js'></script>
   </body>
 </html>
