--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>HTML Academy: Глейси</title>
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic' rel='stylesheet'>
     <link href='css/normalize.css' rel='stylesheet'>
-    <link href='css/style.css' rel='stylesheet'>
+    <link href='css/style.min.css' rel='stylesheet'>
   </head>
   <body class='background-wrapper'>
     <header class='main-header container'>
@@ -268,6 +268,6 @@
     </div>
     <div class='overlay'>
     </div>
-    <script src='js/script.js'></script>
+    <script src='js/script.min.js'></script>
   </body>
 </html>
